--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,12 @@
 [tool.poetry]
 name = "maaml"
-version = "0.0.1"
+version = "0.1.0"
 description = "For time series datasets Machine learning pipline"
 authors = ["Najemeddine Abdennour"]
 license = "GNU General Public License v3 (GPLv3)"
 
 [tool.poetry.dependencies]
-python = "3.10"
+python = "^3.6"
 pandas = "^1.3"
 numpy = "^1.22.0"
 sklearn = "^0.0"
