--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ pandas = "^1.3"
 numpy = "^1.22.0"
 sklearn = "^0.0"
 tensorflow = "^2.7.0"
+matplotlib ="^3.4"
 
 [tool.poetry.dev-dependencies]
 
