--- a/setup.cfg
+++ b/setup.cfg
@@ -22,5 +22,6 @@ install_requires =
     pandas >=1.3
     numpy
     sklearn
-    tensorflow 
+    tensorflow
+    matplotlib 
 include_package_data = False
