--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "maaml"
-version = "0.1.2"
+version = "0.2.0"
 description = "For time series datasets Machine learning pipline"
 authors = ["Najemeddine Abdennour"]
 license = "GNU General Public License v3 (GPLv3)"
@@ -10,7 +10,7 @@ python = "^3.6"
 pandas = "^1.3"
 numpy = "^1.22.0"
 sklearn = "^0.0"
-tensorflow = "^2.7.0"
+keras = "^2.7"
 matplotlib ="^3.4"
 
 [tool.poetry.dev-dependencies]
