--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = maaml
-version = 0.1.2
+version = 0.2.0
 author = Najemeddine Abdennour
 author_email = najemabdennour@gmail.com
 description = For time series datasets Machine learning pipline
@@ -18,10 +18,10 @@ classifiers =
 [options]
 packages = find:
 python_requires = >=3.6
-install_requires = 
+install_requires =
     pandas >=1.3
     numpy
     sklearn
-    tensorflow
+    keras>=2.7
     matplotlib 
 include_package_data = False
