fix dependency by adding fastparquet and fix default data path when path is None in UAHDatasetLoader

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = maaml
-version = 0.4.6
+version = 0.4.7
 author = Najemeddine Abdennour
 author_email = najemabdennour@gmail.com
 description = For time series datasets Machine learning pipline
@@ -23,5 +23,6 @@ install_requires =
     numpy
     sklearn
     keras>=2.7
+    fastparquet >=0.8.0
     matplotlib 
 include_package_data = False
