--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "maaml"
-version = "0.4.6"
+version = "0.4.7"
 description = "For time series datasets Machine learning pipline"
 authors = ["Najemeddine Abdennour"]
 license = "GNU General Public License v3 (GPLv3)"
@@ -12,6 +12,7 @@ numpy = "^1.22.0"
 sklearn = "^0.0"
 keras = "^2.7"
 matplotlib ="^3.4"
+fastparquet="^0.8.0"
 
 [tool.poetry.dev-dependencies]
 
