--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "maaml"
-version = "0.4.8"
+version = "0.4.9"
 description = "For time series datasets Machine learning pipline"
 authors = ["Najemeddine Abdennour"]
 license = "GNU General Public License v3 (GPLv3)"
@@ -13,6 +13,8 @@ sklearn = "^0.0"
 keras = "^2.7"
 matplotlib ="^3.4"
 fastparquet="^0.8.0"
+xgboost="^1.5.2"
+tensorflow="^2.7.0"
 
 [tool.poetry.dev-dependencies]
 
