feat add XGBoost to the model_buildingmethod

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = maaml
-version = 0.4.8
+version = 0.4.9
 author = Najemeddine Abdennour
 author_email = najemabdennour@gmail.com
 description = For time series datasets Machine learning pipline
@@ -24,5 +24,7 @@ install_requires =
     sklearn
     keras>=2.7
     fastparquet >=0.8.0
-    matplotlib 
+    matplotlib
+    xgboost >=1.5.2
+    tensorflow >=2.7.0
 include_package_data = False
